# MandelQT

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
libs/MandelbrotEngineAVX2/: CMakeLists.txt
libs/MandelbrotEngineAVX2/include/MandelbrotEngineAVX2/: MandelbrotEngineAVX2.h  escape_time_avx2.h
libs/MandelbrotEngineAVX2/src/: escape_time_avx2.asm
src/: main.cpp
